REPORTE. Se corrige tablas de los elementos expuestos

--- a/CENEPRED/Avance_03/json/config.json
+++ b/CENEPRED/Avance_03/json/config.json
@@ -323,7 +323,7 @@
             "name": "CARTOGRAFÍA DE PELIGROS",
             "srv": [
                 {
-                    "name": "Inundacion",
+                    "name": "Inundación",
                     "srv": [
                         {
                             "name": "Puntos Críticos",
