DESCARGA. Se adiciona función para la descarga de información

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
@@ -21,14 +21,19 @@
             "boolean": false
         },
         {
+            "name": "GDB (.zip)",
+            "value": "GDB",
+            "boolean": true
+        },
+        {
             "name": "SHP (.zip)",
-            "value": "SHP (.zip)",
-            "boolean": false
+            "value": "SHP",
+            "boolean": true
         },
         {
             "name": "KMZ",
             "value": "KMZ",
-            "boolean": true
+            "boolean": false
         },
         {
             "name": "GeoJSON",
